Linking between genres and overview done/working

--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -3,7 +3,7 @@
 <ul genre-list>
   <% genres.results.forEach(genre => { %>
   <li>
-    <a href="/genre/<%= genre.slug %>">
+    <a href="/genres/<%= genre.slug %>">
       <p><%= genre.name %></p>
     </a>
   </li>
