--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,14 +9,17 @@
   <meta name="author" content="Rooyyke" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="/css/stylesheet.css" type="text/css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../../css/stylesheet.css" />
-  <script src="/server.js" defer></script>
+
 </head>
 
 <body>
-  <%- include('header') %>
-
   <main>
+    {{{body}}}
+  </main>
+</body>
+
+</html>
