fixed the lazyloading FINALLYYY

--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -5,7 +5,7 @@
   <div class="card__wrapper">
     <div class="card">
       <div class="image">
-        <img class="lazy" src="{{image_background}}" alt="{{slug}}">
+        <img class="lazy" src="{{image_background}}" alt="" />
       </div>
       <div class="card__content">
         <a href="/genres/{{slug}}">
